Fix earth time going backward. Revert to supporting Java 11
r5261
2020-01-22

## DISCUSSION
1. https://github.com/mars-sim/mars-sim/issues/267

## CHANGE
1. Revert to supporting Java 11 due to Java 12 denying
   weblaf's reflective access.
2. Modify README.md to show the support of Java 11 only.
3. Unify .gitignore content across all sub-maven modules.

## FIX
1. Prevent earth time from going backward
   - Use int for currentTR
   - Use long variable for earthMillis